corpus/negative/method_calls.txt
====================
No-close method call
====================

System.print(

---

(source_file
    (method_call
        (identifier)
        (identifier)
        (argument_list
            (MISSING ")"))))

==========================
No-parenthesis method call
==========================

System.print "Hello!"

---

(source_file
    (ERROR
        (identifier)
        (identifier))
      (string))
